<resources>
    <string name="app_name">WowGuau-paseador</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="fpassword"><u>Olvidé mi contraseña</u></string>
    <string name="caccount">Crear cuenta</string>

    <string name="bienvenido">Bienvenido</string>
    <string name="qu_deseas_hacer">¿Qué deseas hacer?</string>
    <string name="dar_paseo">Empezar paseo</string>
    <string name="crear_paseo">Crear paseo</string>
    <string name="cancelar_paseo">Cancelar paseo</string>
    <string name="confirmar_paseo">Confirmar paseo</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="actualizar_mis_datos">Actualizar mis datos</string>
    <string name="registra_tus_datos">Registra tus datos</string>
    <string name="recuperar">Recuperar</string>
    <string name="sabemos_que_son_parte_de_tu_familia">Sabemos que son parte de tu familia</string>
    <string name="selecciona_a_qui_n_quieres_darpaseo">Selecciona a quién vas a pasear</string>
    <string name="selecciona_a_qui_n_quieres_cancelar">Selecciona a quién vas a cancelar el paseo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello under construction fragment</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_maps">Map</string>
    <string name="ingrese_una_direcci_n">Ingrese una dirección</string>
    <string name="registrar_direcci_n">Registrar dirección</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_actualizar">Actualizar</string>
    <string name="menu_historial">Historial</string>

    <!-- LoginActivity -->
    <string name="solicitudes_de_paseo">Solicitudes de paseo</string>
    <string name="Facebook">Ingresar con Facebook</string>
    <string name="Twitter">Ingresar con Twitter</string>
    <string name="Google">Ingresar con Google</string>
    <string name="LoginImagen">Login</string>

    <string name="facebook_app_id">2423075578019456</string>
    <string name="fb_login_protocol_scheme">fb2423075578019456</string>
    <string name="title_activity_position_dog">Map</string>
    <string name="title_activity_walking">Walking</string>
    <string name="hint_mensaje">Escribir mensaje&#8230;</string>
    <string name="error_mensaje_vacio">Porfavor escribe un mensaje</string>
    <string name="error_enviar_mensaje">Error al enviar mensaje</string>
</resources>
